# safers-dashboard-app

./: .env  .env.local  .eslintrc.js  .eslintrc.json  .gitignore  Dockerfile  LICENSE  Procfile  README.md  jsconfig.json  package-lock.json  package.json
.github/workflows/: build.yml
.nginx/: nginx.conf
__mocks__/: auth.js  axios.js  common.js  dashboard.js  event-alerts.js  insitu-alerts.js  notifications.js  reports.js  user.js
cypress/e2e/: sign-in.cy.js  sign-up.cy.js
cypress/integration/: my-profile.spec.js  sign-in.spec.js  sign-up.spec.js
mocks/: mocks.json
mocks/routes/: alerts.js  aoi.js  auth.js  common.js  dashboard.js  middlewares.js  myprofile.js
public/: index.html  mock-api-alerts-all.json  mock-api-aoi-all.json  mock-api-sign-in.json  my-profile.json  sign-in.json
scripts/: export_translations.py  import_translations.py  pyproject.toml  translations.py
server/: server.js
src/: App.js  App.scss  config.js  i18n.js  index.js  index.scss  reportWebVitals.js  setupTests.js  test-utils.js
src/TestUtils/: index.js
src/Utility/: conditional.js  extendGlobalValidators.js  pages-404.js  pages-500.js
src/__mocks__/: alerts.js  notifications.js
src/api/: base.js  constants.js  endpoints.js
src/components/: AreaOfInterestPanel.js  JsonFormatter.js  LanguageDropdown.js  Loader.js  MediaComponent.js  Pagination.js  PreLoader.js  SearchButton.js  SortSection.js  TweetComponent.js  languages.js  required-asterisk.js
src/constants/: common.js  dropdowns.js
src/customHooks/: useInterval.js  useLocalStorage.js  useSetNewAlerts.js  (+1 more)
(+492 files in other folders)
