[tool.poetry]
name = "safers-dashboard-app"
version = "0.1.0"
description = ""
authors = ["Allyn Treshansky <allyn.treshansky@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
click = "^8.1.3"
openpyxl = "^3.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
